content/boundary/v0.11.x/content/docs/concepts/security/permissions/resource-table.mdx
---
layout: docs
page_title: Resource Table
description: |-
  Resource Table
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

## Resource Table

The following table works as a quick cheat-sheet to help you manage your
permissions. Note that it's not exhaustive; for brevity it does _not_ show
wildcard or templated grant strings.

Additionally, this does not include available output fields; see the [service
documentation](https://www.boundaryproject.io/api-docs) for guidance.

<!-- BEGIN TABLE -->

<table>
  <thead>
    <tr>
      <th>Resource Type</th>
      <th>Applicable Scopes</th>
      <th>API Endpoint</th>
      <th>Parameters into Permissions Engine</th>
      <th>Available Actions / Examples</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td rowSpan="2">Account</td>
      <td rowSpan="2">
        <ul>
          <li>Global</li>
          <li>Org</li>
        </ul>
      </td>
      <td>
        <code>/accounts</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>account</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create an account
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List accounts
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/accounts/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Pin</li>
          <ul>
            <li>
              <code>&lt;auth-method-id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>account</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read an account
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update an account
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete an account
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=delete</code>
            </li>
          </ul>
          <li>
            <code>set-password</code>: Set a password on an account, without requiring the current password
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=set-password</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=set-password</code>
            </li>
          </ul>
          <li>
            <code>change-password</code>: Change a password on an account given the current password
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=change-password</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=change-password</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Auth Method</td>
      <td rowSpan="2">
        <ul>
          <li>Global</li>
          <li>Org</li>
        </ul>
      </td>
      <td>
        <code>/auth-methods</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>auth-method</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create an auth method
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List auth methods
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/auth-methods/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>auth-method</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read an auth method
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update an auth method
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete an auth method
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
          </ul>
          <li>
            <code>authenticate</code>: Authenticate to an auth method
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=authenticate</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Auth Token</td>
      <td rowSpan="2">
        <ul>
          <li>Global</li>
          <li>Org</li>
        </ul>
      </td>
      <td>
        <code>/auth-tokens</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>auth-token</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>list</code>: List auth tokens
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/auth-tokens/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>auth-token</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read an auth token
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete an auth token
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Group</td>
      <td rowSpan="2">
        <ul>
          <li>Global</li>
          <li>Org</li>
          <li>Project</li>
        </ul>
      </td>
      <td>
        <code>/groups</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>group</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create a group
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List groups
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/groups/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>group</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a group
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a group
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a group
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
          </ul>
          <li>
            <code>add-members</code>: Add members to a group
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=add-members</code>
            </li>
          </ul>
          <li>
            <code>set-members</code>: Set the full set of members on a group
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=set-members</code>
            </li>
          </ul>
          <li>
            <code>remove-members</code>: Remove members from a group
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=remove-members</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Host</td>
      <td rowSpan="2">
        <ul>
          <li>Project</li>
        </ul>
      </td>
      <td>
        <code>/hosts</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>host</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create a host
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List hosts
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/hosts/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Pin</li>
          <ul>
            <li>
              <code>&lt;host-catalog-id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>host</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a host
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a host
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a host
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=delete</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Host Catalog</td>
      <td rowSpan="2">
        <ul>
          <li>Project</li>
        </ul>
      </td>
      <td>
        <code>/host-catalogs</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>host-catalog</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create a host catalog
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List host catalogs
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/host-catalogs/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>host-catalog</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a host catalog
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a host catalog
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a host catalog
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Host Set</td>
      <td rowSpan="2">
        <ul>
          <li>Project</li>
        </ul>
      </td>
      <td>
        <code>/host-sets</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>host-set</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create a host set
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List host sets
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/host-sets/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Pin</li>
          <ul>
            <li>
              <code>&lt;host-catalog-id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>host-set</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a host set
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a host set
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a host set
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=delete</code>
            </li>
          </ul>
          <li>
            <code>add-hosts</code>: Add hosts to a host-set
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=add-hosts</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=add-hosts</code>
            </li>
          </ul>
          <li>
            <code>set-hosts</code>: Set the full set of hosts on a host set
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=set-hosts</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=set-hosts</code>
            </li>
          </ul>
          <li>
            <code>remove-hosts</code>: Remove hosts from a host set
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=remove-hosts</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=remove-hosts</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Managed Group</td>
      <td rowSpan="2">
        <ul>
          <li>Global</li>
          <li>Org</li>
        </ul>
      </td>
      <td>
        <code>/managed-groups</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>managed-group</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create a managed group
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List managed groups
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/managed-groups/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Pin</li>
          <ul>
            <li>
              <code>&lt;auth-method-id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>managed-group</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a managed group
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a managed group
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a managed group
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
            <li>
              <code>id=&lt;pin&gt;;type=&lt;type&gt;;actions=delete</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Role</td>
      <td rowSpan="2">
        <ul>
          <li>Global</li>
          <li>Org</li>
          <li>Project</li>
        </ul>
      </td>
      <td>
        <code>/roles</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>role</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create a role
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List roles
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/roles/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>role</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a role
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a role
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a role
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
          </ul>
          <li>
            <code>add-principals</code>: Add principals to a role
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=add-principals</code>
            </li>
          </ul>
          <li>
            <code>set-principals</code>: Set the full set of principals on a role
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=set-principals</code>
            </li>
          </ul>
          <li>
            <code>remove-principals</code>: Remove principals from a role
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=remove-principals</code>
            </li>
          </ul>
          <li>
            <code>add-grants</code>: Add grants to a role
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=add-grants</code>
            </li>
          </ul>
          <li>
            <code>set-grants</code>: Set the full set of grants on a role
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=set-grants</code>
            </li>
          </ul>
          <li>
            <code>remove-grants</code>: Remove grants from a role
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=remove-grants</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Scope</td>
      <td rowSpan="2">
        <ul>
          <li>Global</li>
          <li>Org</li>
        </ul>
      </td>
      <td>
        <code>/scopes</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>scope</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create a scope
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List scopes
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/scopes/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>scope</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a scope
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a scope
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a scope
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Session</td>
      <td rowSpan="2">
        <ul>
          <li>Project</li>
        </ul>
      </td>
      <td>
        <code>/sessions</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>session</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>list</code>: List sessions
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/session/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>session</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a session
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>cancel</code>: Cancel a session
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=cancel</code>
            </li>
          </ul>
          <li>
            <code>read:self</code>: Read a session, which must be associated with the calling user
          </li>
          <ul>
            <li>
              <code>id=*;type=session;actions=read:self</code>
            </li>
          </ul>
          <li>
            <code>cancel:self</code>: Cancel a session, which must be associated with the calling user
          </li>
          <ul>
            <li>
              <code>id=*;type=session;actions=cancel:self</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Target</td>
      <td rowSpan="2">
        <ul>
          <li>Project</li>
        </ul>
      </td>
      <td>
        <code>/targets</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>target</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create a target
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List targets
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/targets/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>target</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
          </ul>
          <li>
            <code>add-host-sources</code>: Add host sources to a target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=add-host-sources</code>
            </li>
          </ul>
          <li>
            <code>set-host-sources</code>: Set the full set of host sources on a target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=set-host-sources</code>
            </li>
          </ul>
          <li>
            <code>remove-host-sources</code>: Remove host sources from a target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=remove-host-sources</code>
            </li>
          </ul>
          <li>
            <code>add-credential-sources</code>: Add credential sources to a target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=add-credential-sources</code>
            </li>
          </ul>
          <li>
            <code>set-credential-sources</code>: Set the full set of credential sources on a target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=set-credential-sources</code>
            </li>
          </ul>
          <li>
            <code>remove-credential-sources</code>: Remove credential sources from a target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=remove-credential-sources</code>
            </li>
          </ul>
          <li>
            <code>authorize-session</code>: Authorize a session via the target
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=authorize-session</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">User</td>
      <td rowSpan="2">
        <ul>
          <li>Global</li>
          <li>Org</li>
        </ul>
      </td>
      <td>
        <code>/users</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>user</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>create</code>: Create a user
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
          </ul>
          <li>
            <code>list</code>: List users
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/users/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>user</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a user
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a user
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a user
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
          </ul>
          <li>
            <code>add-accounts</code>: Add accounts to a user
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=add-accounts</code>
            </li>
          </ul>
          <li>
            <code>set-accounts</code>: Set the full set of accounts on a user
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=set-accounts</code>
            </li>
          </ul>
          <li>
            <code>remove-accounts</code>: Remove accounts from a user
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=remove-accounts</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td rowSpan="2">Worker</td>
      <td rowSpan="2">
        <ul>
          <li>Global</li>
        </ul>
      </td>
      <td>
        <code>/workers</code>
      </td>
      <td>
        <ul>
          <li>Type</li>
          <ul>
            <li>
              <code>workers</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>list</code>: List workers
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=list</code>
            </li>
          </ul>
          <li>
            <code>create:controller-led</code>: Create a worker using the controller-led workflow
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
            <li>
              <code>type=&lt;type&gt;;actions=create:controller-led</code>
            </li>
          </ul>
          <li>
            <code>create:worker-led</code>: Create a worker using the worker-led workflow
          </li>
          <ul>
            <li>
              <code>type=&lt;type&gt;;actions=create</code>
            </li>
            <li>
              <code>type=&lt;type&gt;;actions=create:worker-led</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
    <tr>
      <td>
        <code>/workers/&lt;id&gt;</code>
      </td>
      <td>
        <ul>
          <li>ID</li>
          <ul>
            <li>
              <code>&lt;id&gt;</code>
            </li>
          </ul>
          <li>Type</li>
          <ul>
            <li>
              <code>workers</code>
            </li>
          </ul>
        </ul>
      </td>
      <td>
        <ul>
          <li>
            <code>read</code>: Read a worker
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=read</code>
            </li>
          </ul>
          <li>
            <code>update</code>: Update a worker
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=update</code>
            </li>
          </ul>
          <li>
            <code>delete</code>: Delete a worker
          </li>
          <ul>
            <li>
              <code>id=&lt;id&gt;;actions=delete</code>
            </li>
          </ul>
        </ul>
      </td>
    </tr>
  </tbody>
</table>

<!-- END TABLE -->
